--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,19 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <meta property="og:url" content="http://www.rarefinds.com.paulrblack.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/Users/paulblack/VS Code/drinks-app/src/assets/og_img.png" />
+  <meta name="description" content="Vinyl shop for collectors and enthusiats" />
+  <meta property="og:local" content="en_US">
+  <meta property="og:site_name" content="Rare Finds">
+  <meta name="keywords"
+    content="Music Records Vinyl Jazz Hip-Hop Dance Soul Bass Funk Techno House Reggae DJs Producers 12inch 45s ">
+  <meta name="author" content="Paul Black">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
